--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
 	"type": "module",
 	"dependencies": {
 		"clsx": "^1.2.1",
+		"flowbite": "^1.5.1",
+		"flowbite-svelte": "^0.23.0",
 		"ky": "^0.31.0",
-		"rambda": "^7.1.4"
+		"rambda": "^7.1.4",
+		"svelte-heros": "^2.3.3"
 	}
 }
