feat: basic pattern matching

--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
 		"sync": "node ./scripts/sync.mjs"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.24.2",
+		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/node": "^18.0.6",
-		"@typescript-eslint/eslint-plugin": "^5.32.0",
-		"@typescript-eslint/parser": "^5.32.0",
+		"@typescript-eslint/eslint-plugin": "^5.33.0",
+		"@typescript-eslint/parser": "^5.33.0",
 		"autoprefixer": "^10.4.8",
+		"broadcast-channel": "^4.14.0",
 		"eslint": "^8.21.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -29,18 +30,19 @@
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
+		"svelte": "^3.49.0",
+		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.6",
+		"tailwindcss": "^3.1.8",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.3.1",
+		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.4",
+		"vite": "^3.0.7",
 		"zx": "^7.0.8"
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltestack/svelte-query": "^1.6.0",
 		"clsx": "^1.2.1",
 		"flowbite": "^1.5.1",
 		"flowbite-svelte": "^0.23.0",
