--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"sync": "node ./scripts/sync.mjs"
+		"sync": "zx ./scripts/sync.mjs"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
