--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,6 +7,11 @@
 			"src": "icon-512.png",
 			"type": "image/png",
 			"sizes": "512x512"
+		},
+		{
+			"src": "/icon-512.png",
+			"sizes": "512x512",
+			"purpose": "maskable"
 		}
 	],
 	"background_color": "#3367D6",
