feat: remove dependency on flowbite

--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/typography": "^0.5.4",
 		"@types/node": "^18.7.9",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
 		"@typescript-eslint/parser": "^5.33.1",
 		"autoprefixer": "^10.4.8",
 		"broadcast-channel": "^4.14.0",
+		"daisyui": "^2.24.0",
 		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"got": "^12.3.1",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
@@ -44,8 +45,6 @@
 	"dependencies": {
 		"@sveltestack/svelte-query": "^1.6.0",
 		"clsx": "^1.2.1",
-		"flowbite": "^1.5.2",
-		"flowbite-svelte": "^0.23.3",
 		"ky": "^0.31.1",
 		"rambda": "^7.2.1",
 		"svelte-heros": "^2.3.3"
