--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-	"name": "unscrabbled",
-	"version": "1.0.13",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"package": "svelte-kit package",
-		"preview": "vite preview",
-		"postinstall": "svelte-kit sync",
-		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"sync": "zx ./scripts/sync.mjs"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.25.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@tailwindcss/typography": "^0.5.4",
-		"@types/node": "^18.7.9",
-		"@typescript-eslint/eslint-plugin": "^5.33.1",
-		"@typescript-eslint/parser": "^5.33.1",
-		"autoprefixer": "^10.4.8",
-		"broadcast-channel": "^4.14.0",
-		"daisyui": "^2.24.0",
-		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.1",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.8",
-		"ts-node": "^10.9.1",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.4",
-		"vite": "^3.0.9",
-		"zx": "^7.0.8"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltestack/svelte-query": "^1.6.0",
-		"clsx": "^1.2.1",
-		"ky": "^0.31.1",
-		"rambda": "^7.2.1",
-		"svelte-heros": "^2.3.3"
-	}
+  "name": "unscrabbled",
+  "version": "1.0.13",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "package": "svelte-kit package",
+    "preview": "vite preview",
+    "postinstall": "svelte-kit sync",
+    "test": "playwright test",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
+    "format": "prettier --write --plugin-search-dir=. .",
+    "sync": "zx ./scripts/sync.mjs"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.25.0",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "next",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/node": "^18.7.9",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "autoprefixer": "^10.4.8",
+    "broadcast-channel": "^4.14.0",
+    "daisyui": "^2.24.0",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "got": "^12.3.1",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.1",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.9",
+    "zx": "^7.0.8"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sveltestack/svelte-query": "^1.6.0",
+    "clsx": "^1.2.1",
+    "ky": "^0.31.1",
+    "rambda": "^7.2.1",
+    "svelte-heros": "^2.3.3"
+  }
 }
