test: sample test cases (wip)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "postinstall": "svelte-kit sync",
     "test": "playwright test",
+    "test:unit": "vitest --run",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
@@ -40,6 +41,7 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.9",
+    "vitest": "^0.23.1",
     "zx": "^7.0.8"
   },
   "type": "module",
