--- a/package.json
+++ b/package.json
@@ -16,40 +16,40 @@
     "sync": "zx ./scripts/sync.mjs"
   },
   "devDependencies": {
-    "@playwright/test": "^1.25.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/node": "^18.7.9",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "autoprefixer": "^10.4.8",
-    "broadcast-channel": "^4.14.0",
-    "daisyui": "^2.24.0",
-    "eslint": "^8.22.0",
+    "@playwright/test": "^1.27.1",
+    "@sveltejs/adapter-auto": "1.0.0-next.84",
+    "@sveltejs/kit": "1.0.0-next.525",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/node": "^18.11.5",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "autoprefixer": "^10.4.12",
+    "broadcast-channel": "^4.18.0",
+    "daisyui": "^2.33.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "got": "^12.3.1",
-    "postcss": "^8.4.16",
+    "got": "^12.5.2",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.1",
+    "prettier-plugin-svelte": "^2.8.0",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.9",
-    "vitest": "^0.23.1",
-    "zx": "^7.0.8"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vitest": "^0.23.4",
+    "zx": "^7.1.1"
   },
   "type": "module",
   "dependencies": {
     "@sveltestack/svelte-query": "^1.6.0",
     "clsx": "^1.2.1",
-    "ky": "^0.31.1",
-    "rambda": "^7.2.1",
-    "svelte-heros": "^2.3.3"
+    "ky": "^0.31.4",
+    "rambda": "^7.3.0",
+    "svelte-heros": "^2.3.5"
   }
 }
