--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. .",
-    "sync": "zx ./scripts/sync.mjs"
+    "sync": "zx ./scripts/sync.mjs",
+    "postversion": "zx ./scripts/postversion.mjs"
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
