--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-vercel": "next",
     "@sveltestack/svelte-query": "^1.6.0",
     "clsx": "^1.2.1",
     "ky": "^0.31.4",
