--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "1.0.0-next.84",
-    "@sveltejs/kit": "1.0.0-next.525",
+    "@sveltejs/adapter-vercel": "1.0.0-next.86",
+    "@sveltejs/kit": "1.0.0-next.584",
     "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -36,21 +36,20 @@
     "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
-    "vite": "^3.2.5",
-    "vitest": "^0.23.4",
+    "vite": "^4.0.1",
+    "vitest": "^0.25.7",
     "zx": "^7.1.1"
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-vercel": "next",
     "@sveltestack/svelte-query": "^1.6.0",
     "clsx": "^1.2.1",
-    "ky": "^0.31.4",
+    "ky": "^0.32.2",
     "rambda": "^7.4.0",
     "svelte-heros": "^2.3.5"
   }
