--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-vercel": "1.0.0-next.86",
-    "@sveltejs/kit": "1.0.0-next.584",
+    "@sveltejs/kit": "^1.0.0",
     "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "^18.11.13",
+    "@types/node": "^18.11.15",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "broadcast-channel": "^4.18.1",
-    "daisyui": "^2.43.1",
+    "daisyui": "^2.43.2",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -34,7 +34,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.54.0",
+    "svelte": "^3.55.0",
     "svelte-check": "^2.10.2",
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
@@ -42,7 +42,7 @@
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
-    "vitest": "^0.25.7",
+    "vitest": "^0.25.8",
     "zx": "^7.1.1"
   },
   "type": "module",
