chore: update deps

--- a/package.json
+++ b/package.json
@@ -17,31 +17,31 @@
     "postversion": "zx ./scripts/postversion.mjs"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-vercel": "1.0.0-next.86",
-    "@sveltejs/kit": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "^18.11.15",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@playwright/test": "^1.30.0",
+    "@sveltejs/adapter-vercel": "^2.0.2",
+    "@sveltejs/kit": "^1.7.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "autoprefixer": "^10.4.13",
-    "broadcast-channel": "^4.18.1",
-    "daisyui": "^2.43.2",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
+    "broadcast-channel": "^4.20.2",
+    "daisyui": "^2.50.1",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "got": "^12.5.3",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.55.0",
-    "svelte-check": "^2.10.2",
-    "svelte-preprocess": "^5.0.0",
-    "tailwindcss": "^3.2.4",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.3",
+    "svelte-preprocess": "^5.0.1",
+    "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
     "vitest": "^0.25.8",
     "zx": "^7.1.1"
   },
@@ -51,6 +51,6 @@
     "clsx": "^1.2.1",
     "ky": "^0.32.2",
     "rambda": "^7.4.0",
-    "svelte-heros": "^2.3.5"
+    "svelte-heros": "^2.6.0"
   }
 }
