--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "postversion": "zx ./scripts/postversion.mjs"
   },
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
-    "@sveltejs/adapter-vercel": "^2.0.2",
-    "@sveltejs/kit": "^1.7.0",
+    "@playwright/test": "^1.31.0",
+    "@sveltejs/adapter-vercel": "^2.1.0",
+    "@sveltejs/kit": "^1.8.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@types/node": "^18.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
     "broadcast-channel": "^4.20.2",
-    "daisyui": "^2.50.1",
+    "daisyui": "^2.50.2",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -37,11 +37,11 @@
     "svelte": "^3.55.1",
     "svelte-check": "^3.0.3",
     "svelte-preprocess": "^5.0.1",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1",
+    "vite": "^4.1.4",
     "vitest": "^0.25.8",
     "zx": "^7.1.1"
   },
@@ -51,6 +51,8 @@
     "clsx": "^1.2.1",
     "ky": "^0.32.2",
     "rambda": "^7.4.0",
-    "svelte-heros": "^2.6.0"
+    "svelte-heros": "^2.6.0",
+    "tailwindcss-animatecss": "^3.0.2",
+    "typewriter-effect": "^2.19.0"
   }
 }
