--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-svelte": "^0.229.0",
     "rambda": "^7.5.0",
     "tailwindcss-animatecss": "^3.0.4",
+    "tiny-invariant": "^1.3.1",
     "typewriter-effect": "^2.20.1"
   }
 }
