--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "baseUrl": "./src",
     "paths": {
-      "~/*": ["./*"],
-      "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"]
+      "~/*": ["./src/*"]
     }
   }
 }
