--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "lucide-svelte": "^0.259.0",
     "rambda": "^7.5.0",
     "tailwindcss-animatecss": "^3.0.5",
-    "tiny-invariant": "^1.3.3",
-    "typewriter-effect": "^2.22.0"
+    "tiny-invariant": "^1.3.3"
   }
 }
